--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   </head>
 
   <body>
-    <h1>Hutto High School Theatre Dept.</h1>
+    <div class="top">
+      <h1>Hutto Highschool Theatre</h1>
+    </div>
+
   </body>
 </html>
