--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
   <body>
     <div class="top">
       <h1>Hutto Highschool Theatre</h1>
+      <nav>
+        <a>About</a>
+        <a>Coming Soon</a>
+        <a>Gallary</a>
+        <a>Thespian</a>
+      </nav>
     </div>
+
 
   </body>
 </html>
