--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
       <h1>Hutto Highschool Theatre</h1>
       <nav>
         <a>About</a>
-        <a>Coming Soon</a>
         <a>Gallary</a>
+        <a>OAP</a>
         <a>Thespian</a>
+        <a>Coming Soon</a>
+        <a>Classes</a>
       </nav>
     </div>
 
