--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <title>HHS Theatre</title>
+    <link href="resetpage.css rel="stylesheet">
     <link href="style.css" rel="stylesheet"/>
   </head>
 
   <body>
-    <div class="top">
+    <header>
       <h1>Hutto Highschool Theatre</h1>
       <nav>
         <a>About</a>
@@ -16,8 +17,10 @@
         <a>Coming Soon</a>
         <a>Classes</a>
       </nav>
-    </div>
+    </header>
+    <main>
+    <img src="quote.jpg" id="quote"/>
 
-
+    </main>
   </body>
 </html>
