--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body class="bg-inverse">
+    <!--navigation-->
     <div id="top" class="container-fluid col-xs-12 col-lg-8 text-center">
       <nav class="navbar navbar-toggleable-md navbar-inverse">
         <a class="navbar-brand" href="#">HHS Theatre</a>
