--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
 
     <main>
-      <img class="img-fluid my-3" src="imgs/quote.jpg">
+      <img class="img-fluid  col-6 my-3" src="imgs/quote.jpg">
     </main>
 
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
