--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
               <a class="nav-link" href="about/">About</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="upcomingevents/">Upcoming Events</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#">Thespian Troupe</a>
             </li>
             <li class="nav-item dropdown">
@@ -30,14 +33,8 @@
                 <a class="dropdown-item" href="#">Award History</a>
               </div>
             </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" data-toggle="dropdown">
-                Classes
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="#">Theatre Production</a>
-                <a class="dropdown-item" href="#">Technical Theatre</a>
-              </div>
+            <li class="nav-item">
+              <a class="nav-link" href="links/">Links</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="galleries/">Galleries</a>
