--- a/galleries/index.html
+++ b/galleries/index.html
@@ -9,17 +9,20 @@
     <!--navigation-->
     <div id="top" class="container-fluid col-xs-12 col-lg-8 text-center">
       <nav class="navbar navbar-toggleable-md navbar-inverse">
-        <a class="navbar-brand" href="#">HHS Theatre</a>
+        <a class="navbar-brand" href="../">HHS Theatre</a>
         <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse" data-target="#open">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="open">
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="about/">About</a>
+              <a class="nav-link" href="../about/">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Thespian Troupe</a>
+              <a class="nav-link" href="../upcomingevents/">Upcoming Events</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../thespian/">Thespian Troupe</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" data-toggle="dropdown">
@@ -30,17 +33,11 @@
                 <a class="dropdown-item" href="#">Award History</a>
               </div>
             </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" data-toggle="dropdown">
-                Classes
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="#">Theatre Production</a>
-                <a class="dropdown-item" href="#">Technical Theatre</a>
-              </div>
+            <li class="nav-item">
+              <a class="nav-link" href="../links/">Links</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Galleries</a>
+              <a class="nav-link" href="../galleries/">Galleries</a>
             </li>
           </ul>
         </div>
