--- a/upcomingevents/index.html
+++ b/upcomingevents/index.html
@@ -49,18 +49,60 @@
 
     <main>
       <div class="container">
-        <div class="row col-6">
-          <img src="/imgs/14632833_1215247928549071_5219831534021244726_n.jpg" class="img-fluid my-3" style:"width: 300px; height: 500px">
-
+        <div class="row">
+          <img src="/imgs/14632833_1215247928549071_5219831534021244726_n.jpg" class="img-fluid my-3 col-6 offset-2">
+          <div class="synopsis col-4">
+            <h2>Mondays Always Leads to Murder</h2>
+            <br>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+              sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+               Ut enim ad minim veniam, quis nostrud exercitation ullamco
+               laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+               irure dolor in reprehenderit in voluptate velit esse cillum
+               dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+               cupidatat non proident, sunt in culpa qui officia deserunt mollit
+              anim id est laborum.</p>
+              <br>
+            <h3>Get tickets <a href="#">HERE</a></h3>
+          </div>
         </div>
 
-        <div class="row col-6">
-          <img src="/imgs/15780650_1323492677724595_7340370516383396934_n.jpg" class="img-fluid my-3">
+        <div class="row">
+          <img src="/imgs/15780650_1323492677724595_7340370516383396934_n.jpg" class="img-fluid my-3 col-6 offset-2">
+          <div class="synopsis col-4">
+          <h2>Shrek</h2>
+          <br>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+             Ut enim ad minim veniam, quis nostrud exercitation ullamco
+             laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+             irure dolor in reprehenderit in voluptate velit esse cillum
+             dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+             cupidatat non proident, sunt in culpa qui officia deserunt mollit
+            anim id est laborum.</p>
+            <br>
+          <h3>Get tickets <a href="#">HERE</a></h3>
+
         </div>
+      </div>
 
-        <div class="row col-6">
-          <img src="/imgs/16864941_1391881350885727_9122371983525720137_n.jpg" class="img-fluid my-3">
+        <div class="row">
+          <img src="/imgs/16864941_1391881350885727_9122371983525720137_n.jpg" class="img-fluid my-3 col-6 offset-2">
+          <div class="synopsis col-4">
+          <h2>Leading Ladies</h2>
+          <br>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+             Ut enim ad minim veniam, quis nostrud exercitation ullamco
+             laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+             irure dolor in reprehenderit in voluptate velit esse cillum
+             dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+             cupidatat non proident, sunt in culpa qui officia deserunt mollit
+            anim id est laborum.</p>
+            <br>
+          <h3>Get tickets <a href="#">HERE</a></h3>
 
+        </div>
         </div>
       </div>
     </main>
