--- a/upcomingevents/index.html
+++ b/upcomingevents/index.html
@@ -50,7 +50,7 @@
     <main>
       <div class="container">
         <div class="row">
-          <img src="/imgs/14632833_1215247928549071_5219831534021244726_n.jpg" class="img-fluid my-3 col-6 offset-2">
+          <img src="../imgs/14632833_1215247928549071_5219831534021244726_n.jpg" class="img-fluid my-3 col-6 offset-2">
           <div class="synopsis col-4">
             <h2>Mondays Always Leads to Murder</h2>
             <br>
@@ -68,7 +68,7 @@
         </div>
 
         <div class="row">
-          <img src="/imgs/15780650_1323492677724595_7340370516383396934_n.jpg" class="img-fluid my-3 col-6 offset-2">
+          <img src="../imgs/15780650_1323492677724595_7340370516383396934_n.jpg" class="img-fluid my-3 col-6 offset-2">
           <div class="synopsis col-4">
           <h2>Shrek</h2>
           <br>
@@ -87,7 +87,7 @@
       </div>
 
         <div class="row">
-          <img src="/imgs/16864941_1391881350885727_9122371983525720137_n.jpg" class="img-fluid my-3 col-6 offset-2">
+          <img src="../imgs/16864941_1391881350885727_9122371983525720137_n.jpg" class="img-fluid my-3 col-6 offset-2">
           <div class="synopsis col-4">
           <h2>Leading Ladies</h2>
           <br>
