--- a/galleries/index.html
+++ b/galleries/index.html
@@ -47,6 +47,7 @@
     <main>
     <div class="container">
       <blockquote class="imgur-embed-pub" lang="en" data-id="a/6uKoR"><a href="//imgur.com/6uKoR">Leading Ladies</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+      <blockquote class="imgur-embed-pub" lang="en" data-id="a/cbsiT"><a href="//imgur.com/cbsiT">Shrek</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
     </div>
     </main>
 
