--- a/links/index.html
+++ b/links/index.html
@@ -134,7 +134,7 @@
                 <div class="articlebody">
                     <h4>Did you know there is a National Storytelling Network?</h4>
                     <p>
-                        Get to connected to people through the art of storytelling.
+                        Get connected to others through the art of storytelling.
                     </p>
                 </div>
             </article>
