--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--navigation-->
     <div id="top" class="container-fluid col-xs-12 col-lg-8 text-center">
       <nav class="navbar navbar-toggleable-md navbar-inverse">
-        <a class="navbar-brand" href="#">HHS Theatre</a>
+        <a class="navbar-brand" href="#">Hutto HS Theatre</a>
         <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse" data-target="#open">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -43,9 +43,17 @@
         </div>
       </nav>
     </div>
+    <div class="container-fluid parallax">
+      <div id="quote">
+        <h5>"We must all do theatre,<br>
+          to find out who we are,<br>
+          and to discover who we could become"<br>
+          -Augusto Boal<h5>
+      </div>
+    </div>
 
     <main class="container-fluid">
-      <img class="img-fluid col-6 my-3" src="imgs/quote.jpg">
+
     </main>
 
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
