--- a/index.html
+++ b/index.html
@@ -6,44 +6,43 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body class="bg-inverse">
-    <!--navigation-->
-    <div id="top" class="container-fluid col-xs-12 col-lg-8 text-center">
-      <nav class="navbar navbar-toggleable-md navbar-inverse">
-        <a class="navbar-brand" href="#">Hutto HS Theatre</a>
-        <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse" data-target="#open">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="open">
-          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" href="about/">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="upcomingevents/">Upcoming Events</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Thespian Troupe</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" data-toggle="dropdown">
-                OAP
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="#">Current News</a>
-                <a class="dropdown-item" href="#">Award History</a>
-              </div>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="links/">Links</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="galleries/">Galleries</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </div>
     <div class="container-fluid parallax">
+      <div id="top" class="container-fluid col-xs-12 col-lg-8 text-center">
+        <nav class="navbar navbar-toggleable-md navbar-inverse">
+          <a class="navbar-brand" href="#">Hutto HS Theatre</a>
+          <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse" data-target="#open">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="open">
+            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="about/">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="upcomingevents/">Upcoming Events</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Thespian Troupe</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" data-toggle="dropdown">
+                  OAP
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <a class="dropdown-item" href="#">Current News</a>
+                  <a class="dropdown-item" href="#">Award History</a>
+                </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="links/">Links</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="galleries/">Galleries</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
       <div id="quote">
         <h5>"We must all do theatre,<br>
           to find out who we are,<br>
@@ -51,11 +50,9 @@
           -Augusto Boal<h5>
       </div>
     </div>
-
-    <main class="container-fluid">
-
-    </main>
-
+    <footer>
+      <p>Hutto ISD | Hutto High School Theatre Department | All Rights Reserved</p>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
