--- a/galleries/index.html
+++ b/galleries/index.html
@@ -47,11 +47,18 @@
     <main>
     <div class="container">
       <div class="row justify-content-center">
-        <blockquote class="imgur-embed-pub" lang="en" data-id="a/6uKoR" data-context="false"><a href="//imgur.com/a/6uKoR">View post on imgur.com</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+        <blockquote class="imgur-embed-pub" lang="en" data-id="a/6uKoR"><a href="//imgur.com/6uKoR">Leading Ladies</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
       </div>
       <div class="row justify-content-center">
-        <blockquote class="imgur-embed-pub" lang="en" data-id="a/cbsiT" data-context="false"><a href="//imgur.com/a/cbsiT">View post on imgur.com</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+        <blockquote class="imgur-embed-pub" lang="en" data-id="a/cbsiT"><a href="//imgur.com/cbsiT">Shrek</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
       </div>
+      <div class="row justify-content-center">
+        <blockquote class="imgur-embed-pub" lang="en" data-id="a/Zpauw"><a href="//imgur.com/Zpauw">The Little Mermaid</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+      </div>
+      <div class="row justify-content-center">
+        <blockquote class="imgur-embed-pub" lang="en" data-id="a/u0pAl"><a href="//imgur.com/u0pAl">Glass Menagire</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+      </div>
+
     </div>
     </main>
 
