--- a/ThespianTroupe/index.html
+++ b/ThespianTroupe/index.html
@@ -51,7 +51,7 @@
 
       <main>
 
-          <h1 class="text-white">Meet Our Theatre Troupe Officers!!</h1>
+          <h1 class="text-slategrey">Meet Our Theatre Troupe Officers!!</h1>
 
         <section class="container-fluid">
           <div class="row">
@@ -64,13 +64,24 @@
             <li>Vice-President: Caleb Stratton</li>
             <li>Secretary: Madelyn Fritz</li>
             <li>Traesurer: Adam Wassilchack</li>
-            <li>Historian:Haley Yungwirth</li>
+            <li>Historian: Haley Yungwirth</li>
             <li>Student Representative: Diego Fernandez</li>
           </ul>
-
+        </section>
+        <section class="link">
+          <a href="www.texasthespians.org/">
+            <img src="http://www.texasthespians.org/images/state-fest/Texas%20Thespians%20Header.jpg"/>
+          </a>
         </section>
         <footer>
 
+
+          <a href="https://www.facebook.com/Hutto-Theatre-1193187917421739/"/>
+            <img src="http://www.barmerahotel.com.au/files/8814/1879/0035/FacebookLogoShadow.png">
+          </a>
+          <a href="www.hipponation.org/"/>
+            <img src="school_header copy.png"/>
+          </a>
         </footer>
 
 
