--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                   OAP
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <a class="dropdown-item" href="#">Current News</a>
+                  <a class="dropdown-item" href="oap/">Current News</a>
                   <a class="dropdown-item" href="#">Award History</a>
                 </div>
               </li>
