--- a/galleries/index.html
+++ b/galleries/index.html
@@ -22,16 +22,10 @@
               <a class="nav-link" href="../upcomingevents/">Upcoming Events</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../thespian/">Thespian Troupe</a>
+              <a class="nav-link" href="../ThespianTroupe/">Thespian Troupe</a>
             </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" data-toggle="dropdown">
-                OAP
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="#">Current News</a>
-                <a class="dropdown-item" href="#">Award History</a>
-              </div>
+            <li class="nav-item">
+              <a class="nav-link" href="../oap/">OAP</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../links/">Links</a>
@@ -43,6 +37,7 @@
         </div>
       </nav>
     </div>
+    <!--end navigation-->
 
     <main>
     <div class="container">
