--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a class="nav-link" href="ThespianTroupe/">Thespian Troupe</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/oap/">OAP</a>
+                <a class="nav-link" href="oap/">OAP</a>
               </li>
               </li>
               <li class="nav-item">
