--- a/oap/index.html
+++ b/oap/index.html
@@ -43,7 +43,7 @@
       <div class="container">
         <h1>AWARDS</h1>
         <div class="row">
-          <img src="/imgs/monday.jpg" class="img-fluid my-3 col-6 offset-2">
+          <img src="../imgs/monday.jpg" class="img-fluid my-3 col-6 offset-2">
           <div class="synopsis col-4">
             <h2>Mondays Always Leads to Murder</h2>
             <br>
@@ -61,7 +61,7 @@
         </div>
 
         <div class="row">
-          <img src="/imgs/shrek.jpg" class="img-fluid my-3 col-6 offset-2">
+          <img src="../imgs/shrek.jpg" class="img-fluid my-3 col-6 offset-2">
           <div class="synopsis col-4">
             <h2>Shrek</h2>
             <br>
@@ -79,7 +79,7 @@
         </div>
 
         <div class="row">
-          <img src="/imgs/ladies.jpg" class="img-fluid my-3 col-6 offset-2">
+          <img src="../imgs/ladies.jpg" class="img-fluid my-3 col-6 offset-2">
           <div class="synopsis col-4">
             <h2>Leading Ladies</h2>
             <br>
