--- a/oap/index.html
+++ b/oap/index.html
@@ -9,7 +9,7 @@
     <!--navigation-->
     <div id="top" class="container-fluid col-xs-12 col-lg-8 text-center">
       <nav class="navbar navbar-toggleable-md navbar-inverse">
-        <a class="navbar-brand" href="../">HHS Theatre</a>
+        <a class="navbar-brand" href="../">Hutto HS Theatre</a>
         <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse" data-target="#open">
           <span class="navbar-toggler-icon"></span>
         </button>
