added required meta tags for mobile, adjusted navigation for consistency on thespian troupe page, changed name of thespian troupe page from stylesheet to style for consistency with rest of project

--- a/ThespianTroupe/index.html
+++ b/ThespianTroupe/index.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-      <link rel="stylesheet" href="stylesheet.css">
+      <link rel="stylesheet" href="style.css">
     <title>Thespian troupe</title>
   </head>
 
@@ -11,7 +12,7 @@
       <!--navigation-->
       <div id="top" class="container-fluid col-xs-12 col-lg-8 text-center">
         <nav class="navbar navbar-toggleable-md navbar-inverse">
-          <a class="navbar-brand" href="../">HHS Theatre</a>
+          <a class="navbar-brand" href="../">Hutto HS Theatre</a>
           <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse" data-target="#open">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -51,7 +52,7 @@
           </div>
         </section>
         <section class="officers">
-          <ul>
+          <ul class="footer-list">
             <li>President: Daniel Kay</li>
             <li>Vice-President: Caleb Stratton</li>
             <li>Secretary: Madelyn Fritz</li>
@@ -75,14 +76,12 @@
             <img src="school_header copy.png"/>
           </a>
         </footer>
-
-
       </main>
 
 
 
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
   </body>
 </html>
