--- a/links/index.html
+++ b/links/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Tangerine"
         rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" type="image/png" href="../imgs/jester.png" />
 </head>
 <body class="bg-inverse">
   <!--navigation-->
