--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
       </div>
     </div>
     <footer>
+      <a href="http://www.hipponation.org/" target="_blank">
+        <img src="imgs/huttologo.png" alt="hippopower"></a>
+      <a href="https://www.facebook.com/Hutto-Theatre-1193187917421739/" target="_blank">
+        <img src="imgs/facebook.png" alt="Facebook"></a>
       <p>Hutto ISD | Hutto High School Theatre Department | All Rights Reserved</p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
