--- a/ThespianTroupe/index.html
+++ b/ThespianTroupe/index.html
@@ -67,20 +67,14 @@
             <img src="http://www.texasthespians.org/images/state-fest/Texas%20Thespians%20Header.jpg"/>
           </a>
         </section>
-        <footer>
-
-
-          <a href="https://www.facebook.com/Hutto-Theatre-1193187917421739/"/>
-            <img src="http://www.barmerahotel.com.au/files/8814/1879/0035/FacebookLogoShadow.png">
-          </a>
-          <a href="www.hipponation.org/"/>
-            <img src="school_header copy.png"/>
-          </a>
-        </footer>
       </main>
-
-
-
+      <footer>
+        <a href="http://www.hipponation.org/" target="_blank">
+          <img src="../imgs/huttologo.png" alt="hippopower"></a>
+        <a href="https://www.facebook.com/Hutto-Theatre-1193187917421739/" target="_blank">
+          <img src="../imgs/facebook.png" alt="Facebook"></a>
+        <p>Hutto ISD | Hutto High School Theatre Department | All Rights Reserved</p>
+      </footer>
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
