--- a/links/index.html
+++ b/links/index.html
@@ -193,7 +193,9 @@
     <aside>
         <center>
             <a href="http://www.hipponation.org/" target="_blank">
-                <img src="http://www.hipponation.org/pics/school_header.png" alt="hippopower"></a>
+                <img src="../imgs/huttologo.png" alt="hippopower"></a>
+            <a href="https://www.facebook.com/Hutto-Theatre-1193187917421739/" target="_blank">
+              <img src="../imgs/facebook.png" alt="Facebook"></a>
         </center>
         <center><strong><h4>Hipponation</h4></strong></center>
     </aside>
