--- a/ThespianTroupe/index.html
+++ b/ThespianTroupe/index.html
@@ -42,31 +42,57 @@
         </nav>
       </div>
       <!--end navigation-->
-
       <main>
+        <h1 class="text-slategrey">Thespian Troupe #4491</h1>
 
-          <h1 class="text-slategrey">Meet Our Theatre Troupe Officers!!</h1>
-
-        <section class="container-fluid">
-          <div class="row">
-            <img class="img-fluid  col-12 my-3" src="../imgs/thespian.jpg">
+        <div class="container-fluid">
+          <div class="row col-xs-12 col-md-10 m-auto officers">
+            <section class="col-xs-12 col-lg-6">
+              <img src="../imgs/thespian.jpg" class="mx-auto"id="officers">
+            </section>
+            <section class="col-xs-12 col-lg-6 my-auto">
+              <ul class="footer-list">
+                <li>President: Daniel Kay</li>
+                <li>Vice-President: Caleb Stratton</li>
+                <li>Secretary: Madelyn Fritz</li>
+                <li>Traesurer: Adam Wassilchack</li>
+                <li>Historian: Haley Yungwirth</li>
+                <li>Student Rep: Diego Fernandez</li>
+              </ul>
+            </section>
           </div>
-        </section>
-        <section class="officers">
-          <ul class="footer-list">
-            <li>President: Daniel Kay</li>
-            <li>Vice-President: Caleb Stratton</li>
-            <li>Secretary: Madelyn Fritz</li>
-            <li>Traesurer: Adam Wassilchack</li>
-            <li>Historian: Haley Yungwirth</li>
-            <li>Student Representative: Diego Fernandez</li>
-          </ul>
-        </section>
-        <section class="link">
-          <a href="www.texasthespians.org/">
-            <img src="http://www.texasthespians.org/images/state-fest/Texas%20Thespians%20Header.jpg"/>
-          </a>
-        </section>
+        </div>
+
+        <div class="container-fluid">
+          <div class="row col-xs-12 col-md-10 mx-auto my-5">
+            <section class="col-xs-12 col-lg-6">
+              <a href="http://www.texasthespians.org/">
+                <img class="link row mx-auto" src="http://www.texasthespians.org/images/state-fest/Texas%20Thespians%20Header.jpg"/></a>
+              <a href="https://www.schooltheatre.org/internationalthespiansociety/home/">
+                <img class="link row mx-auto" src="../imgs/its.jpg"/></a>
+            </section>
+            <section class="col-xs-12 col-lg-6 p-5">
+              <form>
+                <h4 class="mb-5">Troupe Member Sign In:</h4>
+                <div class="form-group row">
+                  <div class="col-12">
+                    <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+                  </div>
+                </div>
+                <div class="form-group row">
+                  <div class="col-12">
+                    <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+                  </div>
+                </div>
+                <div class="form-group row">
+                  <div class="mx-auto my-3">
+                    <button type="submit" class="btn btn-primary">Sign in</button>
+                  </div>
+                </div>
+              </form>
+            </section>
+          </div>
+        </div>
       </main>
       <footer>
         <a href="http://www.hipponation.org/" target="_blank">
