--- a/ThespianTroupe/index.html
+++ b/ThespianTroupe/index.html
@@ -66,9 +66,9 @@
         <div class="container-fluid">
           <div class="row col-xs-12 col-md-10 mx-auto my-5">
             <section class="col-xs-12 col-lg-6">
-              <a href="http://www.texasthespians.org/">
+              <a href="http://www.texasthespians.org/" target="_blank">
                 <img class="link row mx-auto" src="http://www.texasthespians.org/images/state-fest/Texas%20Thespians%20Header.jpg"/></a>
-              <a href="https://www.schooltheatre.org/internationalthespiansociety/home/">
+              <a href="https://www.schooltheatre.org/internationalthespiansociety/home/" target="_blank">
                 <img class="link row mx-auto" src="../imgs/its.jpg"/></a>
             </section>
             <section class="col-xs-12 col-lg-6 p-5">
