--- a/oap/index.html
+++ b/oap/index.html
@@ -52,7 +52,7 @@
     <div class="container my-3">
         <div class="row">
           <img src="../imgs/TrophyAward.png" class="award my-3 col-6 offset-2">
-          <div class="synopsis col-4">
+          <div class="synopsis col-xs-10 col-md-4">
             <h4>Third Place 2015</h4>
             <br>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
@@ -65,7 +65,7 @@
 
         <div class="row">
           <img src="../imgs/TrophyAward.png" class="award my-3 col-6 offset-2">
-          <div class="synopsis col-4">
+          <div class="synopsis col-xs-10 col-md-4">
             <h4>First Place 2014</h4>
             <br>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
@@ -78,7 +78,7 @@
 
         <div class="row">
           <img src="../imgs/TrophyAward.png" class="award my-3 col-6 offset-2">
-          <div class="synopsis col-4">
+          <div class="synopsis col-xs-10 col-md-4">
             <h4>Second Place 2013</h4>
             <br>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
