--- a/ThespianTroupe/index.html
+++ b/ThespianTroupe/index.html
@@ -42,7 +42,7 @@
         </nav>
       </div>
       <!--end navigation-->
-      <main>
+      <main class="container-fluid">
         <h1 class="text-slategrey">Thespian Troupe #4491</h1>
 
         <div class="container-fluid">
@@ -71,7 +71,7 @@
               <a href="https://www.schooltheatre.org/internationalthespiansociety/home/" target="_blank">
                 <img class="link row mx-auto" src="../imgs/its.jpg"/></a>
             </section>
-            <section class="col-xs-12 col-lg-6 p-5">
+            <section class="col-xs-12 col-lg-6 p-3">
               <form>
                 <h4 class="mb-5">Troupe Member Sign In:</h4>
                 <div class="form-group row">
