--- a/links/index.html
+++ b/links/index.html
@@ -198,10 +198,10 @@
             <img src="../imgs/facebook.png" alt="Facebook"></a>
       </center>
         <center>
-          <h5><b>Hutto ISD | Hutto High School Theatre Department | All Rights Reserved.</b></h5>
+          <p>Hutto ISD | Hutto High School Theatre Department | All Rights Reserved.</p>
           <br>
             <p>Website Disclaimer</p>
-            <p>
+            <p id="disclaimer">
                 ATTENTION: The Hutto Independent School District (Hutto ISD) does not assume any responsibility
                 or liability for the content that may be present<br> within
                 external Websites linked to and from this site that are operated or created
