--- a/upcomingevents/index.html
+++ b/upcomingevents/index.html
@@ -44,8 +44,10 @@
     <main>
       <div class="container">
         <div class="row">
-          <img src="../imgs/monday.jpg" class="img-fluid my-3 col-6 offset-2">
-          <div class="synopsis col-4">
+          <div class="col-lg-6">
+            <img src="../imgs/monday.jpg" class="poster mx-auto d-block">
+          </div>
+          <div class="synopsis col-lg-4 col-lg-offset-2">
             <h2>Mondays Always Leads to Murder</h2>
             <br>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
@@ -62,37 +64,41 @@
         </div>
 
         <div class="row">
-          <img src="../imgs/shrek.jpg" class="img-fluid my-3 col-6 offset-2">
-          <div class="synopsis col-4">
-          <h2>Shrek</h2>
-          <br>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-             Ut enim ad minim veniam, quis nostrud exercitation ullamco
-             laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-             irure dolor in reprehenderit in voluptate velit esse cillum
-             dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-             cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum.</p>
+          <div class="col-lg-6">
+            <img src="../imgs/shrek.jpg" class="poster mx-auto d-block">
+          </div>
+          <div class="synopsis col-lg-4 col-lg-offset-2">
+            <h2>Shrek</h2>
             <br>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+              sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+               Ut enim ad minim veniam, quis nostrud exercitation ullamco
+               laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+               irure dolor in reprehenderit in voluptate velit esse cillum
+               dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+               cupidatat non proident, sunt in culpa qui officia deserunt mollit
+              anim id est laborum.</p>
+              <br>
             <h3>Get tickets <a href="#">HERE</a></h3>
           </div>
         </div>
 
         <div class="row">
-          <img src="../imgs/ladies.jpg" class="img-fluid my-3 col-6 offset-2">
-          <div class="synopsis col-4">
-          <h2>Leading Ladies</h2>
-          <br>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-             Ut enim ad minim veniam, quis nostrud exercitation ullamco
-             laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-             irure dolor in reprehenderit in voluptate velit esse cillum
-             dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-             cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum.</p>
+          <div class="col-lg-6">
+            <img src="../imgs/ladies.jpg" class="poster mx-auto d-block">
+          </div>
+          <div class="synopsis col-lg-4 col-lg-offset-2">
+            <h2>Leading Ladies</h2>
             <br>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+              sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+               Ut enim ad minim veniam, quis nostrud exercitation ullamco
+               laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+               irure dolor in reprehenderit in voluptate velit esse cillum
+               dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+               cupidatat non proident, sunt in culpa qui officia deserunt mollit
+              anim id est laborum.</p>
+              <br>
             <h3>Get tickets <a href="#">HERE</a></h3>
           </div>
         </div>
