--- a/oap/index.html
+++ b/oap/index.html
@@ -42,55 +42,59 @@
     <!--end navigation-->
 
     <main>
-      <div class="container-fluid my-3">
-        <div class="row main">
+      <div class="container-fluid my-3 responsive-img">
+        <div class="row">
           <!-- <h2>Leading Ladies</h2> -->
         </div>
       </div>
+    </main>
 
     <div class="container my-3">
         <div class="row">
-          <img src="../imgs/TrophyAward.png" class="award my-3 col-6 offset-2">
-          <div class="synopsis col-4">
+            <div class="offset-lg-3 col-lg-3">
+            <img src="../imgs/TrophyAward.png" class="award mx-auto d-block">
+            </div>
+            <div class="synopsis col-lg-3">
             <h4>Third Place 2015</h4>
             <br>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
               sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-               Ut enim ad minim veniam, quis nostrud exercitation ullamco
-               laboris nisi ut aliquip ex ea commodo consequat.</p>
+               Ut enim ad minim veniam.</p>
               <br>
           </div>
         </div>
 
         <div class="row">
-          <img src="../imgs/TrophyAward.png" class="award my-3 col-6 offset-2">
-          <div class="synopsis col-4">
+          <div class="offset-lg-3 col-lg-3">
+            <img src="../imgs/TrophyAward.png" class="award mx-auto d-block">
+          </div>
+          <div class="synopsis col-lg-3">
             <h4>First Place 2014</h4>
             <br>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
               sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-               Ut enim ad minim veniam, quis nostrud exercitation ullamco
-               laboris nisi ut aliquip ex ea commodo consequat.</p>
+               Ut enim ad minim veniam.</p>
               <br>
           </div>
         </div>
 
         <div class="row">
-          <img src="../imgs/TrophyAward.png" class="award my-3 col-6 offset-2">
-          <div class="synopsis col-4">
+          <div class="offset-lg-3 col-lg-3">
+            <img src="../imgs/TrophyAward.png" class="award mx-auto d-block">
+          </div>
+          <div class="synopsis col-lg-3">
             <h4>Second Place 2013</h4>
             <br>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
               sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-               Ut enim ad minim veniam, quis nostrud exercitation ullamco
-               laboris nisi ut aliquip ex ea commodo consequat.</p>
+               Ut enim ad minim veniam.</p>
               <br>
           </div>
         </div>
 
       </div>
       </div>
-    </main>
+
 
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
