update about page

--- a/ThespianTroupe/index.html
+++ b/ThespianTroupe/index.html
@@ -71,9 +71,9 @@
               <a href="https://www.schooltheatre.org/internationalthespiansociety/home/" target="_blank">
                 <img class="link row mx-auto" src="../imgs/its.jpg"/></a>
             </section>
-            <section class="col-xs-12 col-lg-6 p-3">
+            <section class="col-xs-12 col-lg-6 p-5 m-auto">
               <form>
-                <h4 class="mb-5">Troupe Member Sign In:</h4>
+                <h4>Troupe Member Sign In:</h4>
                 <div class="form-group row">
                   <div class="col-12">
                     <input type="email" class="form-control" id="inputEmail" placeholder="Email">
