--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>HHS Theatre</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="../imgs/jester.png" />
   </head>
   <body class="bg-inverse">
@@ -43,8 +43,34 @@
     <!--end navigation-->
 
     <main class="container-fluid">
-      <div class="row m-5">
-        <img src="linda.jpg">
+      <div class="container-fluid">
+        <div class="row col-xs-12 col-md-10 mx-auto my-5 director">
+          <section class="col-xs-12 col-lg-6">
+            <img src="linda.jpg" class="mx-auto"id="linda">
+          </section>
+          <section class="col-xs-12 col-lg-6 my-auto">
+            <h3>Linda Rosenbusch</h3>
+            <h5>-Theatrical Director-</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
+              rutrum fermentum tellus, vitae malesuada elit bibendum eu. Fusce
+              euismod nisl vitae nibh posuere tempor. Nunc id euismod erat. Ut
+              pretium volutpat leo, at consequat urna bibendum nec. Ut a blandit
+              tellus. Cras ut lobortis ex. Mauris maximus mauris placerat tortor
+              mollis facilisis. Nullam pharetra auctor ultrices. Proin magna
+              mauris, sagittis eget consequat sed, hendrerit nec sem. Cras
+              congue volutpat porta.
+              Proin lobortis, nibh in consequat rutrum, metus mauris scelerisque
+              turpis, auctor tincidunt enim nunc nec arcu. Quisque ut feugiat
+              nisl. Proin a nisl in nulla ullamcorper vestibulum viverra at leo.
+              Nullam justo ipsum, cursus nec laoreet et, laoreet eget nibh.
+              Phasellus purus risus, suscipit sed dolor a, consectetur aliquam
+              justo. Nam ligula urna, malesuada eget placerat non, dapibus vitae
+              turpis. Maecenas ullamcorper dolor purus, at suscipit libero
+              laoreet malesuada. Morbi viverra, odio non ornare congue, libero
+              lacus tincidunt risus, vel congue lorem arcu sed leo. Aliquam nec
+              elementum arcu.</p>
+            </section>
+        </div>
       </div>
 
     </main>
