--- a/galleries/index.html
+++ b/galleries/index.html
@@ -44,7 +44,7 @@
     <!--end navigation-->
 
     <main>
-    <div class="container">
+    <div class="container mt-5">
       <div class="row justify-content-center">
         <blockquote class="imgur-embed-pub" lang="en" data-id="a/6uKoR"><a href="//imgur.com/6uKoR">Leading Ladies</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
       </div>
