--- a/about/index.html
+++ b/about/index.html
@@ -43,7 +43,7 @@
     <!--end navigation-->
 
     <main class="container-fluid">
-      <div class="container-fluid">
+      <div class="container-fluid col-xl-9">
         <div class="row col-xs-12 col-md-10 mx-auto my-5 director">
           <section class="col-xs-12 col-lg-6">
             <img src="linda.jpg" class="mx-auto"id="linda">
