Revert "add in padding left"

--- a/links/index.html
+++ b/links/index.html
@@ -14,10 +14,9 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="icon" type="image/png" href="../imgs/jester.png" />
 </head>
-
 <body class="bg-inverse">
   <!--navigation-->
-  <div id="top" class="container col-xs-12 col-lg-8 text-center">
+  <div id="top" class="container-fluid col-xs-12 col-lg-8 text-center">
     <nav class="navbar navbar-toggleable-md navbar-inverse">
       <a class="navbar-brand" href="../">Hutto HS Theatre</a>
       <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse" data-target="#open">
